--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       <h2 class="title">Who? Me?</h2>
       <div class="side">
         <div class="about-me">
-          <p>I am Jeph. Currently an undergraduate student seeking an internship to enhance my skills in coding, and everything dev. I love to learn anything, and I am currently climing my way to become a good, ever-learning, software and web developer.</p>
+          <p>I am Jeph. Currently an undergraduate student seeking an internship to enhance my skills in coding, and everything dev. I love to learn anything, and I'm always climbing my way to become a good, ever-learning, software and web
+            developer.</p>
         </div>
         <!--
         <div class="photos">
@@ -58,15 +59,6 @@
           <img src="photos/2.jpeg" />
           <img src="photos/3.jpg" />
           <img src="photos/4.jpeg" />
-          <img src="photos/1.png" />
-          <img src="photos/2.jpeg" />
-          <img src="photos/3.jpg" />
-          <img src="photos/4.jpeg" />
-          <img src="photos/1.png" />
-          <img src="photos/2.jpeg" />
-          <img src="photos/3.jpg" />
-          <img src="photos/4.jpeg" />
-
         </div>
       -->
       </div>
@@ -78,14 +70,19 @@
   <!-- skills -->
   <section class="skills" id="skills">
     <div class="max-width">
+      <h1 class="title">skills and professional development</h1>
+      <div class="wrap">
         <div class="left">
-          <h1 class="title">skills and professional development</h1>
+
           <h2 class="sktitle">Coding and Development</h2>
-          <p class="desc">I have been coding for almost 7 years. In those seven years, I have learned basic HTML, CSS, and JavaScript, and taught others in Java, C++, and C. Worked on projects involving basic Artificial Intelligence with familiarity in Python, Android App development in Java, and React Native. Also experienced ReactJS, GatsbyJS, PHP, MySQL, Firebase, Google Maps API, <br>
+          <p class="desc">I have been coding for almost 7 years. In those seven years, I have learned basic HTML, CSS, and JavaScript, and taught fellow students Java, C++, and C. Worked on projects involving basic Artificial Intelligence with
+            familiarity
+            in Python, Android App development in Java, and React Native. Also experienced ReactJS, GatsbyJS, PHP, MySQL, Firebase, Google Maps API, <br>
           </p>
 
           <h2 class="sktitle">Design and Prototyping</h2>
-          <p class="desc">Colors before code is, for me, an important thing. I like to design and envision applications or web designs. I am experienced in prototyping applications such as Figma, and Adobe XD, and designing publication materials with the knowledge of the importance of branding, and concepts and theories of colors.<br>
+          <p class="desc">Colors before code is, for me, an important thing. I like to design and envision applications or web designs. I am experienced in prototyping applications such as Figma, and Adobe XD, and designing publication materials with
+            the knowledge of the importance of branding, concepts and theories of colors.<br>
           </p>
 
           <h2 class="sktitle">Content Making and Writing</h2>
@@ -95,92 +92,107 @@
           </p>
 
         </div>
-<!--
+
         <div class="right">
+          <h2 class="sktitle2">Web Development and Database</h2>
           <div class="techstack">
-            <img src="techstack/HTML.png">
-            <img src="techstack/CCS3.png">
-            <img src="techstack/C++.png">
-            <img src="techstack/C.png">
             <img src="techstack/JS.png">
-            <img src="techstack/Java.png">
-            <img src="techstack/NodeJs.png">
+            <img src="techstack/NodeJS.png">
             <img src="techstack/React.png">
-            <img src="techstack/Java Android.png">
             <img src="techstack/Firebase.png">
-            <img src="techstack/ReactFirebase.png">
-            <img src="techstack/Gatsby.png">
-            <img src="techstack/Python.png">
+            <img src="techstack/TypeScript.png">
             <img src="techstack/PHP.png">
             <img src="techstack/MySQL.png">
           </div>
+
+          <h2 class="sktitle2">Programming and Basic AI</h2>
+          <div class="techstack">
+            <img src="techstack/Java.png">
+            <img src="techstack/C.png">
+            <img src="techstack/C++.png">
+            <img src="techstack/Python.png">
+            <img src="techstack/Java Android.png">
+          </div>
+
+          <h2 class="sktitle2">Design and Graphics</h2>
+          <div class="techstack">
+            <img src="techstack/Figma.png">
+            <img src="techstack/XD.png">
+            <img src="techstack/Canva.png">
+            <img src="techstack/DaVinci.png">
+            <img src="techstack/PS.png">
+          </div>
+
         </div>
-      -->
       </div>
- </section>
 
- <!-- xp -->
- <section class="xp" id="xp">
-   <div class="max-width">
-     <h1 class="title">experiences and involvements</h1>
-     <h2 class="org-title">Google Developer Student Clubs USTP</h2><br>
-     <div class="xp-inv">
-       <div class="left">
-         <img src="org-logos/GDSC.png" alt="Google Developer Student Clubs USTP">
-       </div>
-       <div class="right">
-         <p>Google Developer Student Clubs USTP's mission is to bridge the gap between theory and practice.
-           Currently the Chief Community Development Officer, and the former Acting Chief Technology Officer,
-           and Internal Relations Officer.</p>
-         <!-- <a href="">GDSC USTP Facebook Page</a>-->
-       </div>
-     </div>
+    </div>
 
-     <h2 class="org-title">WeCARE</h2><br>
-     <div class="xp-inv">
-       <div class="left">
-         <img src="org-logos/WECARE.png" alt="We CARE USTP">
-       </div>
-       <div class="right">
-         <p>A university-recognized extra-curricular organization that has the mission to help
-           fellow students with their mental health. Currently the Chief Technology Officer
-           for the Android-iOS mobile application.</p>
-         <!-- <a href="">GDSC USTP Facebook Page</a>-->
-       </div>
-     </div>
+    </div>
+  </section>
 
-     <h2 class="org-title">Federation of Accredited Extra-Curricular Student Organizations USTP</h2><br>
-     <div class="xp-inv">
-       <div class="left">
-         <img src="org-logos/FAESO2.png" alt="FAESO USTP">
-       </div>
-       <div class="right">
-         <p>Currently serving as a Junior Deputy. FAESO USTP is the mother organization of all Extra-Curricular Student Organizations
-           in the University of Science and Technology of Southern Philippines.
-           The organization and its members support and collaborate with all accredited extra-curricular organizations
-           to support their respective mission, vision, and goals</p>
-         <!-- <a href="">GDSC USTP Facebook Page</a>-->
-       </div>
-     </div>
+  <!-- xp -->
+  <section class="xp" id="xp">
+    <div class="max-width">
+      <h1 class="title">experiences and involvements</h1>
+      <h2 class="org-title">Google Developer Student Clubs USTP</h2><br>
+      <div class="xp-inv">
+        <div class="left">
+          <img src="org-logos/GDSC.png" alt="Google Developer Student Clubs USTP">
+        </div>
+        <div class="right">
+          <p>Google Developer Student Clubs USTP's mission is to bridge the gap between theory and practice.
+            Currently the Chief Community Development Officer, and the former Acting Chief Technology Officer,
+            and Internal Relations Officer.</p>
+          <!-- <a href="">GDSC USTP Facebook Page</a>-->
+        </div>
+      </div>
 
-     <h2 class="org-title">Institute of Computer Engineers of the Philippines - Student Edition USTP</h2><br>
-     <div class="xp-inv">
-       <div class="left">
-         <img src="org-logos/ICPEP.png" alt="FAESO USTP">
-       </div>
-       <div class="right">
-         <p>A nationally-recognized Computer Engineering organization that is part of ICPEP Region X. Served as
-           the USTP chapter's Public Information Officer Internal, and currently a Volunter Resources Head, and
-           the organization's website project manager for two years... and counting.
-         </p>
-         <!-- <a href="">GDSC USTP Facebook Page</a>-->
-       </div>
-     </div>
+      <h2 class="org-title">WeCARE</h2><br>
+      <div class="xp-inv">
+        <div class="left">
+          <img src="org-logos/WECARE.png" alt="We CARE USTP">
+        </div>
+        <div class="right">
+          <p>A university-recognized extra-curricular organization that has the mission to help
+            fellow students with their mental health. Currently the Chief Technology Officer
+            for the Android-iOS mobile application.</p>
+          <!-- <a href="">GDSC USTP Facebook Page</a>-->
+        </div>
+      </div>
+
+      <h2 class="org-title">Federation of Accredited Extra-Curricular Student Organizations USTP</h2><br>
+      <div class="xp-inv">
+        <div class="left">
+          <img src="org-logos/FAESO2.png" alt="FAESO USTP">
+        </div>
+        <div class="right">
+          <p>Currently serving as a Junior Deputy. FAESO USTP is the mother organization of all Extra-Curricular Student Organizations
+            in the University of Science and Technology of Southern Philippines.
+            The organization and its members support and collaborate with all accredited extra-curricular organizations
+            to support their respective mission, vision, and goals</p>
+          <!-- <a href="">GDSC USTP Facebook Page</a>-->
+        </div>
+      </div>
+
+      <h2 class="org-title">Institute of Computer Engineers of the Philippines - Student Edition USTP</h2><br>
+      <div class="xp-inv">
+        <div class="left">
+          <img src="org-logos/ICPEP.png" alt="FAESO USTP">
+        </div>
+        <div class="right">
+          <p>A nationally-recognized Computer Engineering organization that is part of ICPEP Region X. Served as
+            the USTP chapter's Public Information Officer Internal, and currently a Volunter Resources Head, and
+            the organization's website project manager for two years... and counting.
+          </p>
+          <!-- <a href="">GDSC USTP Facebook Page</a>-->
+        </div>
+      </div>
 
 
-   </div>
+    </div>
 
- </section>
+  </section>
 
   <!--contact-->
   <section class="connect" id="connect">
